# fidelity_back

./: .gitignore  pyproject.toml  ruff.toml
fidelity_back/: main.py
fidelity_back/auth/: auth.py  hashing.py  oauth2.py
fidelity_back/config/: config.py  database.py
fidelity_back/routes/: timezone.py  user.py  user_role.py
fidelity_back/schemas/: timezone.py  user.py  user_role.py
